force-app/main/default/objects/Employee__c/fields/DismissalDate__c.field-meta.xml
<CustomField>
    <fullName>DismissalDate__c</fullName>
    <label>Dismissal Date</label>
    <type>Date</type>
</CustomField>