force-app/main/default/objects/Employee__c/fields/EmploymentDate__c.field-meta.xml
<CustomField>
    <fullName>EmploymentDate__c</fullName>
    <label>Employment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>