force-app/main/default/objects/Employee__c/fields/WorkDuration__c.field-meta.xml
<CustomField>
    <fullName>WorkDuration__c</fullName>
    <formula>TODAY() -  EmploymentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>